# portfolio

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
backend/: .dockerignore  DEPLOYMENT_GUIDE.md  Dockerfile  MIGRATION_GUIDE.md  RAG_SETUP.md  RAG_SYSTEM_README.md  README.md  README_NEW.md  app.py  chatbot.py  env.example  fly.toml  main.py  pyproject.toml  pyrightconfig.json  rag.py  rag_system.py  requirements.txt  run.py  run_new.py  setup_knowledge_base.py  startup.py  test_rag.py  update_rag_database.py
backend/chatbot/: __init__.py  rag_system.py
backend/config/: settings.py  simple_settings.py
backend/resources/: knowledge.md  resources.yaml
backend/src/: __init__.py  main.py
backend/src/portfolio/: __init__.py
backend/src/portfolio/api/: chat.py  health.py
backend/src/portfolio/models/: chat.py  resources.py
backend/src/portfolio/services/: ai_models.py  chatbot_service.py  resource_manager.py
backend/tests/: test_models.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: About.tsx  ChatBot.tsx  ChatPage.tsx  Contact.tsx  Header.tsx  Hero.tsx  Logo.tsx  PaintCursor.tsx  Projects.tsx  Skills.tsx  WaterAnimation.css  WaterAnimation.tsx
frontend/src/config/: api.ts
